After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700865 - Orca can't read landmarks in firefox
Orca can't read landmarks in firefox
Status: RESOLVED FIXED
Product: pyatspi2
Classification: Applications
Component: general
unspecified
Other Linux
: Normal major
: ---
Assigned To: pyatspi2 maintainer(s)
pyatspi2 maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-22 23:43 UTC by Cameron Matheson
Modified: 2015-02-27 16:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Cameron Matheson 2013-05-22 23:43:17 UTC
Orca can't find landmarks on any web pages in firefox (or epiphany, but I'm not sure if that's implemented there yet).  In firefox, pressing 'm' should go to the next landmark, but landmarks are never found.

Steps to reproduce:
1) start orca
2) start firefox
3) navigate to http://www.html5accessibility.com/tests/roles-land.html
4) press 'm' to go to the next landmark
5) instead of getting a landmark, orca will say "wrapping to top.  no landmark found."
Comment 1 Joanmarie Diggs (IRC: joanie) 2013-09-14 22:26:41 UTC
Orca is calling pyatspi's createMatchRule() with the following list of attributes:

['xml-roles:application', 'xml-roles:article', 'xml-roles:banner', 'xml-roles:complementary', 'xml-roles:contentinfo', 'xml-roles:definition', 'xml-roles:directory', 'xml-roles:document', 'xml-roles:grid', 'xml-roles:log', 'xml-roles:main', 'xml-roles:menubar', 'xml-roles:navigation', 'xml-roles:note', 'xml-roles:region', 'xml-roles:search', 'xml-roles:secondary', 'xml-roles:seealso', 'xml-roles:status']

And an attributeMatchType of ANY. In other words, if any of those xml-roles are present, it's a match.

But when createMatchRule() turns that list into a dictionary in attributesListToHash(), the end result is {'xml-roles': 'status'}.

I think the values probably need to be a list rather than a string....

Transfering to at-spi.
Comment 2 Mike Gorse 2013-09-15 17:40:54 UTC
Should be fixed for the up-coming 2.9.92 release of AT-SPI:
at-spi2-atk: commit 9d1040
pyatspi2: commit 8841c9
Comment 3 Jose Vilmar Estacio de Souza 2013-09-16 01:33:45 UTC
Maybe I'm doing something wrong, but after compile and install at-spi2-atk and at-spi2-core, the problem still exists.
When I go to page and press the m key, orca says "wrapping to top.  no landmark
found.
I am running orcca 3.9.92-pre.
Comment 4 Mike Gorse 2013-09-16 02:40:19 UTC
It was working for me earlier.

You need to update pyatspi2 if you haven't already.
Comment 5 Jose Vilmar Estacio de Souza 2013-09-16 06:52:38 UTC
OOPS!
I didn't update pyatspi2.
Works correctly, thanks.
Comment 6 André Klapper 2015-02-27 16:40:48 UTC
[Moving at-spi/pyatspi2 bugs to separate product. See bug 740075]