Allow a :-separated list of attribute values when reading match rules

https://bugzilla.gnome.org/show_bug.cgi?id=700865